---
source: typegraph/core/src/runtimes/prisma/type_generation/mod.rs
expression: tp.print(inp)
---
root: struct '_Record_QueryInput' #70
├─ [cursor]: optional '_66__Record_Cursor?' #66
│  └─ item: union '_Record_Cursor' #65
│     ├─ variant_0: struct #61
│     │  └─ [id]: string #2
│     ├─ variant_1: struct #62
│     │  └─ [name]: string #3
│     ├─ variant_2: struct #63
│     │  └─ [age]: integer #4
│     └─ variant_3: struct #64
│        └─ [created_at]: string #1
├─ [distinct]: optional '_69__KeysOf_Record?' #69
│  └─ item: list '_KeysOf_Record' #68
│     └─ item: string #67 enum{ '"id"', '"name"', '"age"', '"created_at"' }
├─ [orderBy]: optional '_56__Record_OrderBy?' #56
│  └─ item: list '_Record_OrderBy' #55
│     └─ item: struct #54
│        ├─ [age]: optional '_Sort_nullable' #53
│        │  └─ item: union #52
│        │     ├─ variant_0: struct #51
│        │     │  ├─ [nulls]: string '_NullsOrder' #47 enum{ '"first"', '"last"' }
│        │     │  └─ [sort]: string '_SortOrder' #46 enum{ '"asc"', '"desc"' }
│        │     └─ variant_1: string '_SortOrder' #46 enum{ '"asc"', '"desc"' }
│        ├─ [created_at]: optional '_Sort' #50
│        │  └─ item: union #49
│        │     ├─ variant_0: struct #48
│        │     │  └─ [sort]: string '_SortOrder' #46 enum{ '"asc"', '"desc"' }
│        │     └─ variant_1: string '_SortOrder' #46 enum{ '"asc"', '"desc"' }
│        ├─ [id]: optional '_Sort' #50
│        │  └─ item: union #49
│        │     ├─ variant_0: struct #48
│        │     │  └─ [sort]: string '_SortOrder' #46 enum{ '"asc"', '"desc"' }
│        │     └─ variant_1: string '_SortOrder' #46 enum{ '"asc"', '"desc"' }
│        └─ [name]: optional '_Sort' #50
│           └─ item: union #49
│              ├─ variant_0: struct #48
│              │  └─ [sort]: string '_SortOrder' #46 enum{ '"asc"', '"desc"' }
│              └─ variant_1: string '_SortOrder' #46 enum{ '"asc"', '"desc"' }
├─ [skip]: optional '_60__Skip?' #60
│  └─ item: integer '_Skip' #59
├─ [take]: optional '_58__Take?' #58
│  └─ item: integer '_Take' #57
└─ [where]: optional '_45_QueryRecordWhereInput?' #45
   └─ item: struct 'QueryRecordWhereInput' #44
      ├─ [AND]: optional '_42__41_QueryRecordWhereInput[]?' #42
      │  └─ item: list '_41_QueryRecordWhereInput[]' #41
      │     └─ item: &QueryRecordWhereInput #40
      ├─ [NOT]: optional '_43_QueryRecordWhereInput?' #43
      │  └─ item: &QueryRecordWhereInput #40
      ├─ [OR]: optional '_42__41_QueryRecordWhereInput[]?' #42
      │  └─ item: list '_41_QueryRecordWhereInput[]' #41
      │     └─ item: &QueryRecordWhereInput #40
      ├─ [age]: optional '_37__integer_filter_c?' #37
      │  └─ item: optional '_integer_filter_c' #36
      │     └─ item: union #35
      │        ├─ variant_0: either '_integer_filter' #33
      │        │  ├─ variant_0: integer #25
      │        │  ├─ variant_1: struct #28
      │        │  │  └─ [equals]: integer #25
      │        │  ├─ variant_2: struct #29
      │        │  │  └─ [not]: integer #25
      │        │  ├─ variant_3: struct #30
      │        │  │  ├─ [gt]: optional #26
      │        │  │  │  └─ item: integer #25
      │        │  │  ├─ [gte]: optional #26
      │        │  │  │  └─ item: integer #25
      │        │  │  ├─ [lt]: optional #26
      │        │  │  │  └─ item: integer #25
      │        │  │  └─ [lte]: optional #26
      │        │  │     └─ item: integer #25
      │        │  ├─ variant_4: struct #31
      │        │  │  └─ [in]: list #27
      │        │  │     └─ item: integer #25
      │        │  └─ variant_5: struct #32
      │        │     └─ [notIn]: list #27
      │        │        └─ item: integer #25
      │        └─ variant_1: struct #34
      │           └─ [not]: either '_integer_filter' #33
      │              ├─ variant_0: integer #25
      │              ├─ variant_1: struct #28
      │              │  └─ [equals]: integer #25
      │              ├─ variant_2: struct #29
      │              │  └─ [not]: integer #25
      │              ├─ variant_3: struct #30
      │              │  ├─ [gt]: optional #26
      │              │  │  └─ item: integer #25
      │              │  ├─ [gte]: optional #26
      │              │  │  └─ item: integer #25
      │              │  ├─ [lt]: optional #26
      │              │  │  └─ item: integer #25
      │              │  └─ [lte]: optional #26
      │              │     └─ item: integer #25
      │              ├─ variant_4: struct #31
      │              │  └─ [in]: list #27
      │              │     └─ item: integer #25
      │              └─ variant_5: struct #32
      │                 └─ [notIn]: list #27
      │                    └─ item: integer #25
      ├─ [created_at]: optional '_38__string_filter_c?' #38
      │  └─ item: optional '_string_filter_c' #22
      │     └─ item: union #21
      │        ├─ variant_0: union '_string_filter' #19
      │        │  ├─ variant_0: string #7
      │        │  ├─ variant_1: struct #10
      │        │  │  └─ [equals]: string #7
      │        │  ├─ variant_2: struct #11
      │        │  │  └─ [not]: string #7
      │        │  ├─ variant_3: struct #12
      │        │  │  └─ [in]: list #9
      │        │  │     └─ item: string #7
      │        │  ├─ variant_4: struct #13
      │        │  │  └─ [notIn]: list #9
      │        │  │     └─ item: string #7
      │        │  ├─ variant_5: struct #16
      │        │  │  ├─ [contains]: string #7
      │        │  │  └─ [mode]: optional #15
      │        │  │     └─ item: string #14 enum{ '"insensitive"' }
      │        │  ├─ variant_6: struct #17
      │        │  │  └─ [search]: string #7
      │        │  └─ variant_7: struct #18
      │        │     ├─ [endsWith]: optional #8
      │        │     │  └─ item: string #7
      │        │     └─ [startsWith]: optional #8
      │        │        └─ item: string #7
      │        └─ variant_1: struct #20
      │           └─ [not]: union '_string_filter' #19
      │              ├─ variant_0: string #7
      │              ├─ variant_1: struct #10
      │              │  └─ [equals]: string #7
      │              ├─ variant_2: struct #11
      │              │  └─ [not]: string #7
      │              ├─ variant_3: struct #12
      │              │  └─ [in]: list #9
      │              │     └─ item: string #7
      │              ├─ variant_4: struct #13
      │              │  └─ [notIn]: list #9
      │              │     └─ item: string #7
      │              ├─ variant_5: struct #16
      │              │  ├─ [contains]: string #7
      │              │  └─ [mode]: optional #15
      │              │     └─ item: string #14 enum{ '"insensitive"' }
      │              ├─ variant_6: struct #17
      │              │  └─ [search]: string #7
      │              └─ variant_7: struct #18
      │                 ├─ [endsWith]: optional #8
      │                 │  └─ item: string #7
      │                 └─ [startsWith]: optional #8
      │                    └─ item: string #7
      ├─ [id]: optional '_23__string_filter_c?' #23
      │  └─ item: optional '_string_filter_c' #22
      │     └─ item: union #21
      │        ├─ variant_0: union '_string_filter' #19
      │        │  ├─ variant_0: string #7
      │        │  ├─ variant_1: struct #10
      │        │  │  └─ [equals]: string #7
      │        │  ├─ variant_2: struct #11
      │        │  │  └─ [not]: string #7
      │        │  ├─ variant_3: struct #12
      │        │  │  └─ [in]: list #9
      │        │  │     └─ item: string #7
      │        │  ├─ variant_4: struct #13
      │        │  │  └─ [notIn]: list #9
      │        │  │     └─ item: string #7
      │        │  ├─ variant_5: struct #16
      │        │  │  ├─ [contains]: string #7
      │        │  │  └─ [mode]: optional #15
      │        │  │     └─ item: string #14 enum{ '"insensitive"' }
      │        │  ├─ variant_6: struct #17
      │        │  │  └─ [search]: string #7
      │        │  └─ variant_7: struct #18
      │        │     ├─ [endsWith]: optional #8
      │        │     │  └─ item: string #7
      │        │     └─ [startsWith]: optional #8
      │        │        └─ item: string #7
      │        └─ variant_1: struct #20
      │           └─ [not]: union '_string_filter' #19
      │              ├─ variant_0: string #7
      │              ├─ variant_1: struct #10
      │              │  └─ [equals]: string #7
      │              ├─ variant_2: struct #11
      │              │  └─ [not]: string #7
      │              ├─ variant_3: struct #12
      │              │  └─ [in]: list #9
      │              │     └─ item: string #7
      │              ├─ variant_4: struct #13
      │              │  └─ [notIn]: list #9
      │              │     └─ item: string #7
      │              ├─ variant_5: struct #16
      │              │  ├─ [contains]: string #7
      │              │  └─ [mode]: optional #15
      │              │     └─ item: string #14 enum{ '"insensitive"' }
      │              ├─ variant_6: struct #17
      │              │  └─ [search]: string #7
      │              └─ variant_7: struct #18
      │                 ├─ [endsWith]: optional #8
      │                 │  └─ item: string #7
      │                 └─ [startsWith]: optional #8
      │                    └─ item: string #7
      └─ [name]: optional '_24__string_filter_c?' #24
         └─ item: optional '_string_filter_c' #22
            └─ item: union #21
               ├─ variant_0: union '_string_filter' #19
               │  ├─ variant_0: string #7
               │  ├─ variant_1: struct #10
               │  │  └─ [equals]: string #7
               │  ├─ variant_2: struct #11
               │  │  └─ [not]: string #7
               │  ├─ variant_3: struct #12
               │  │  └─ [in]: list #9
               │  │     └─ item: string #7
               │  ├─ variant_4: struct #13
               │  │  └─ [notIn]: list #9
               │  │     └─ item: string #7
               │  ├─ variant_5: struct #16
               │  │  ├─ [contains]: string #7
               │  │  └─ [mode]: optional #15
               │  │     └─ item: string #14 enum{ '"insensitive"' }
               │  ├─ variant_6: struct #17
               │  │  └─ [search]: string #7
               │  └─ variant_7: struct #18
               │     ├─ [endsWith]: optional #8
               │     │  └─ item: string #7
               │     └─ [startsWith]: optional #8
               │        └─ item: string #7
               └─ variant_1: struct #20
                  └─ [not]: union '_string_filter' #19
                     ├─ variant_0: string #7
                     ├─ variant_1: struct #10
                     │  └─ [equals]: string #7
                     ├─ variant_2: struct #11
                     │  └─ [not]: string #7
                     ├─ variant_3: struct #12
                     │  └─ [in]: list #9
                     │     └─ item: string #7
                     ├─ variant_4: struct #13
                     │  └─ [notIn]: list #9
                     │     └─ item: string #7
                     ├─ variant_5: struct #16
                     │  ├─ [contains]: string #7
                     │  └─ [mode]: optional #15
                     │     └─ item: string #14 enum{ '"insensitive"' }
                     ├─ variant_6: struct #17
                     │  └─ [search]: string #7
                     └─ variant_7: struct #18
                        ├─ [endsWith]: optional #8
                        │  └─ item: string #7
                        └─ [startsWith]: optional #8
                           └─ item: string #7

